<resources>
    <string name="app_name">TeamHub</string>

    // These are placeholders, they would normally be taken from a database/JSON
    // Title menu
    <string name="menu_content_description">Menu</string>
    <string name="team_name">Grange Woodbine F.C.</string>
    <string name="crest_content_description">Crest</string>

    // Menu tabs
    <string name="home_tab">Home</string>
    <string name="see_full_fixtures">Fixtures</string>
    <string name="see_full_table">Table</string>

    // Next fixture
    <string name="next_fixture">Results and Fixtures</string>

    // League table
    <string name="league_table">League Table</string>
    <string name="played">Pl</string>
    <string name="won">W</string>
    <string name="drawn">D</string>
    <string name="lost">L</string>
    <string name="goals_for">GF</string>
    <string name="goals_against">GA</string>
    <string name="goal_difference">GD</string>
    <string name="points">Pts</string>

    // Training
    <string name="training">Training</string>
    <string name="training_location">Grange Woodbine Astro</string>
    <string name="training_start_time">8.30pm</string>
    <string name="training_end_time">10.00pm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Choose new team</string>
    <string name="refresh_settings">Refresh information</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    // Menu Options
    <string name="menu_option1">Home</string>
    <string name="menu_option2">Results/Fixtures</string>
    <string name="menu_option3">League Tables</string>
    <string name="menu_option4">Training</string>
    <string name="menu_option5">Contacts</string>
    <string name="menu_option6">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_load_info">LoadInfo</string>
    <string name="title_activity_home">Home</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">Results and Fixtures</string>
    <string name="title_section3">League Table</string>
    <string name="title_section4">Choose new team</string>
    <string name="title_activity_fixture_list">FixtureList</string>
    <string name="title_activity_main_with_fragment">MainWithFragment</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
