<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.theglassboard.teamhub.FragmentTable">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:background="#ffdddddd">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Sections">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LeagueTableFrame"
                android:background="#ffffffff"
                android:layout_margin="10dp" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/LeagueTableLayout" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/league_table"
                        android:id="@+id/LeagueTableHeading"
                        android:gravity="center"
                        android:textColor="#ff444444"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/abc_cab_background_top_mtrl_alpha"
                        android:minHeight="30dp" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/LeagueTablePutHere"
                        android:stretchColumns="1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp" >

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/StatsRow" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:id="@+id/PositionColumn"
                                android:textColor="@android:color/darker_gray"
                                android:singleLine="false"
                                android:layout_margin="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/TeamColumn"
                                android:textColor="@android:color/darker_gray"
                                android:layout_margin="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/played"
                                android:id="@+id/PlayedColumn"
                                android:textColor="@android:color/darker_gray"
                                android:gravity="center"
                                android:layout_margin="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/won"
                                android:id="@+id/WonColumn"
                                android:textColor="@android:color/darker_gray"
                                android:gravity="center"
                                android:layout_margin="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/drawn"
                                android:id="@+id/DrawnColumn"
                                android:textColor="@android:color/darker_gray"
                                android:gravity="center"
                                android:layout_margin="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/lost"
                                android:id="@+id/LostColumn"
                                android:textColor="@android:color/darker_gray"
                                android:gravity="center"
                                android:layout_margin="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/points"
                                android:id="@+id/PointsColumn"
                                android:textColor="@android:color/darker_gray"
                                android:gravity="center"
                                android:layout_margin="5dp" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
