<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context="me.theglassboard.teamhub.Home">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <FrameLayout android:id="@+id/container" android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         If you're not building against API 17 or higher, use
         android:layout_gravity="left" instead. -->
    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->
    <fragment android:id="@+id/navigation_drawer"
        android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
        android:layout_gravity="start"
        android:name="me.theglassboard.teamhub.NavigationDrawerFragment"
        tools:layout="@layout/fragment_navigation_drawer" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Sections">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:id="@+id/TopMenu"
                android:background="#32cccccc"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:textColor="#ff444444"
                    android:id="@+id/teamName"
                    android:gravity="center"
                    android:textSize="@dimen/abc_text_size_large_material" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/NextFixture"
                android:layout_marginBottom="20dp"
                android:clickable="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/next_fixture"
                        android:id="@+id/resultsAndFixtures"
                        android:textColor="#ff444444"
                        android:gravity="top|center"
                        android:layout_gravity="right|top" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/Teams"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:id="@+id/homeTeam"
                            android:textColor="#ff444444"
                            android:gravity="center"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/homeScore"
                            android:gravity="center"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:textColor="@android:color/darker_gray" />

                        <TextView
                            android:layout_width="19dp"
                            android:layout_height="fill_parent"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:id="@+id/versus"
                            android:textColor="@android:color/darker_gray"
                            android:gravity="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/awayScore"
                            android:gravity="center"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:textColor="@android:color/darker_gray" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:id="@+id/awayTeam"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textColor="#ff444444" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/locationAndTime"
                        android:gravity="center"
                        android:textColor="#ff444444" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LeagueTable"
                android:layout_marginBottom="20dp">
            <!-- android:background="@android:color/white" -->

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/LeagueTableContainer">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/league_table"
                        android:id="@+id/textView"
                        android:gravity="center"
                        android:textColor="#ff444444" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/Table"
                        android:stretchColumns="1"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/LeagueTableHeadings">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:id="@+id/positionColumn"
                                android:textColor="@android:color/darker_gray"
                                android:singleLine="false"
                                android:layout_margin="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/teamColumn"
                                android:textColor="@android:color/darker_gray"
                                android:layout_margin="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/played"
                                android:id="@+id/playedColumn"
                                android:textColor="@android:color/darker_gray"
                                android:gravity="center"
                                android:layout_margin="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/points"
                                android:id="@+id/pointsColumn"
                                android:textColor="@android:color/darker_gray"
                                android:gravity="center"
                                android:layout_margin="5dp" />

                        </TableRow>
                    </TableLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/see_full_table"
                        android:id="@+id/seeFullTable"
                        android:textColor="@android:color/darker_gray"
                        android:layout_gravity="right"
                        android:clickable="true"
                        android:layout_margin="10dp" />

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>
    </ScrollView>

</android.support.v4.widget.DrawerLayout>


